<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

	<LinearLayout 
	    android:id="@+id/LinearLayout1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".ViewTaskActivity" >
	
	    <TextView
	        style="@style/TaskHeaderLabel"
	        android:text="@string/task_title" />
	
	    <TextView
	        android:id="@+id/txtTaskTitle"
	        style="@style/TaskBodyLabel"/>
	
	    <TextView
	        android:text="@string/task_description"
			style="@style/TaskHeaderLabel"/>

	
	    <TextView
	        android:id="@+id/txtTaskDescription"
	        style="@style/TaskBodyLabel"/>
	
	    <TextView
	        android:text="@string/task_due_date"
			style="@style/TaskHeaderLabel"/>
	
	    <TextView
	        android:id="@+id/txtTaskDueDate"
	        style="@style/TaskBodyLabel"/>
	
	    <TextView
	        android:text="@string/task_status"
			style="@style/TaskHeaderLabel"/>
	
	    <TextView
	        android:id="@+id/txtTaskStatus"
	        style="@style/TaskBodyLabel"/>
	
	    <TextView
	        android:text="@string/task_priority"
			style="@style/TaskHeaderLabel"/>
	
	    <TextView
	        android:id="@+id/txtTaskPriority"
	        style="@style/TaskBodyLabel"/>
	
	    <TextView
	        android:text="@string/task_category"
			style="@style/TaskHeaderLabel"/>
	
	    <TextView
	        android:id="@+id/txtTaskCategory"
	        style="@style/TaskBodyLabel"/>
	
	</LinearLayout>
</ScrollView>
