<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewTaskActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:focusable="true" android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <TextView
            style="@style/TaskHeaderLabel"
            android:text="@string/task_title" />

        <EditText
            android:id="@+id/txtAddTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_title" >

            <requestFocus />
        </EditText>

        <TextView
            style="@style/TaskHeaderLabel"
            android:text="@string/task_description" />

        <EditText
            android:id="@+id/txtAddTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/task_description" />

        <TextView
            style="@style/TaskHeaderLabel"
            android:text="@string/task_due_date" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnAddTaskDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="" />

            <Button
                android:id="@+id/btnAddTaskDueTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/btnAddTaskDueDate"
                android:text="" />
        </RelativeLayout>

        <TextView
            style="@style/TaskHeaderLabel"
            android:text="@string/task_priority" />

        <Spinner
            android:id="@+id/spnAddTaskPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TaskHeaderLabel"
            android:text="@string/task_category" />

        <Spinner
            android:id="@+id/spnAddTaskCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>